I've updated one of the subtitles and added another one, I've also created a list of top 3 laptops for Mac and Windows

--- a/index.html
+++ b/index.html
@@ -8,6 +8,19 @@
   </head>
   <body>
     <h1>Are you a Mac or Windows person?</h1>
-    <h3>this is the subtitle lol</h3>
+    <h3>3 best machines for Apple</h3>
+    <p>Mac Laptops</p>
+    <ol>
+      <li>MacBook Pro</li>
+      <li>MacBook Air</li>
+      <li>Mac Mini</li>
+    </ol>
+    <h3>3 best machines for Windows</h3>
+    <p>Windows Laptops</p>
+    <ol>
+      <li>Lenovo</li>
+      <li>Dell</li>
+      <li>HP</li>
+    </ol>
   </body>
 </html>
