--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
       <li>MacBook Air</li>
       <li>Mac Mini</li>
     </ol>
+    
+    <h3>Are you looking for <strong>Used</strong> MacBook Prices</h3>
+    <ul>$679.59 air used</ul>
+    <ul>$1179.99 pro used</ul>
+    <ul>$799.99 air new</ul>
+
     <h3>3 best machines for Windows</h3>
     <p>Windows Laptops</p>
     <ol>
