--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <h1>Are you a Mac or Windows person?</h1>
-    <h3>3 best machines for Apple</h3>
+    <h3>3 best machines for <a href="https://www.apple.com/mac/">Apple</h3></a>
     <p>Mac Laptops</p>
     <ol>
       <li>MacBook Pro</li>
@@ -21,7 +21,7 @@
     <ul>$1179.99 pro used</ul>
     <ul>$799.99 air new</ul>
 
-    <h3>3 best machines for Windows</h3>
+    <h3>3 best machines for <a href="https://www.microsoft.com/en-us/windows/windows-laptops"> Windows</h3></a>
     <p>Windows Laptops</p>
     <ol>
       <li>Lenovo</li>
