--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   </head>
   <body>
     <h1>Are you a Mac or Windows person?</h1>
+    <img class="img" src="./mac images/macvwindows.png" alt="mac vs apple logos"/>
     <h3>3 best machines for Apple</h3>
+        <img class="img" src="./mac images/macdesktopandlaptop.png" alt="macbooks"/>
     <p>Mac Laptops</p>
     <ol>
       <li>MacBook Pro</li>
@@ -22,6 +24,7 @@
     <ul>$799.99 air new</ul>
 
     <h3>3 best machines for Windows</h3>
+        <img class="img" src="./mac images/windows.jpg" alt="windows"/>
     <p>Windows Laptops</p>
     <ol>
       <li>Lenovo</li>
@@ -29,4 +32,10 @@
       <li>HP</li>
     </ol>
   </body>
+   <style>
+        .img{
+            height: auto;
+            width: 100%;
+        }
+    </style>
 </html>
